--- a/package.json
+++ b/package.json
@@ -34,5 +34,11 @@
     "prettier": "^2.8.1",
     "sequelize-cli": "^6.5.2",
     "supertest": "^6.3.3"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint",
+      "prettier --write ."
+    ]
   }
 }
