--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
     "start": "nodemon -e js,ejs",
-    "test": "jest",
+    "test": "NODE_ENV=test jest --detectOpenHandles",
     "start:prod": "node index.js",
     "prepare": "husky install"
   },
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "cheerio": "^1.0.0-rc.12",
+    "cross-env": "^7.0.3",
     "eslint": "^8.30.0",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
