--- a/config/config.json
+++ b/config/config.json
@@ -14,10 +14,7 @@
     "dialect": "postgres"
   },
   "production": {
-    "username": "postgres",
-    "password": "12345678",
-    "database": "wd-election-prod",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "use_env_variable":"DATABASE_URL",
+    "dialect":"postgres"
   }
 }
