--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "morgan": "^1.10.0",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.3.2",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "sequelize": "^6.28.0",
