--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "html-to-text": "^9.0.3",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "morgan": "^1.3.2",
+    "nodemailer": "^6.9.0",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
