--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
     "sequelize": "^6.28.0",
+    "superagent": "^8.0.8",
     "tiny-csrf": "^1.1.3"
   },
   "devDependencies": {
