--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "nodemon -e js,ejs",
     "test": "NODE_ENV=test jest --detectOpenHandles",
     "start:prod": "node index.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "clean:start": "npm run pretest && NODE_ENV=test npm start",
+    "cypress:open": "cypress open",
+    "cy:test": "npx cypress run"
   },
   "author": "",
   "license": "ISC",
@@ -40,6 +43,7 @@
   "devDependencies": {
     "cheerio": "^1.0.0-rc.12",
     "cross-env": "^7.0.3",
+    "cypress": "^13.6.4",
     "eslint": "^8.30.0",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
