Updated workflow files

--- a/config.env
+++ b/config.env
@@ -17,3 +17,5 @@ SENDGRID_HOST=smtp.sendgrid.net
 SENDGRID_PORT=587
 GMAIL_USERNAME=fresam123ab@gmail.com
 GMAIL_PASSWORD=xyulwmthittawwbo
+DATABASE_URL=postgres://online_voting_gahw_user:PUYCSVgQmtdirGPfjORGZx09gf0pXL9C@dpg-cf7a0j9gp3jnt5h0mt4g-a/online_voting_gahw
+RENDER_API_KEY = rnd_cWVtnVOEBkgCfpFIckrtgYAu0n11
