--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "prepare": "husky install",
     "clean:start": "npm run pretest && NODE_ENV=test npm start",
     "cypress:open": "cypress open",
-    "cy:test": "npx cypress run"
+    "cy:test": "npx cypress run",
+    "lint": "lint-staged",
+    "build": "npm install"
   },
   "author": "",
   "license": "ISC",
@@ -31,7 +33,7 @@
     "lodash": "^4.17.21",
     "morgan": "^1.3.2",
     "nodemailer": "^6.9.0",
-    "nodemon": "^2.0.20",
+    "nodemon": "^3.0.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -44,11 +46,11 @@
     "cheerio": "^1.0.0-rc.12",
     "cross-env": "^7.0.3",
     "cypress": "^13.6.4",
-    "eslint": "^8.30.0",
+    "eslint": "^8.56.0",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
-    "lint-staged": "^13.1.0",
-    "prettier": "^2.8.1",
+    "lint-staged": "^13.3.0",
+    "prettier": "^2.8.8",
     "sequelize-cli": "^6.5.2",
     "supertest": "^6.3.3"
   },
