--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -76,11 +76,11 @@ jobs:
       - name: Notify on Failure
         uses: rtCamp/action-slack-notify@v2
         with:
-          status: ${{ job.status }}
+          status: ${{ needs.run-tests.result }}
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_CHANNEL: developing
-          SLACK_MESSAGE: ${{ github.job }} job in worflow ${{ github.workflow }} of ${{ github.repository }} has ${{ job.status }}
+          SLACK_MESSAGE: The workflow  ${{ github.workflow }} of ${{ github.repository }} failed in the step ${{ needs.run-tests.name }}
 
   deploy:
     needs:
