--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -64,22 +64,15 @@ jobs:
         run: |
           npm install cypress cypress-json-results
           npx cypress run
-      - name: Set output with failed step name
-        id: output
-        if: failure()
-        run: |
-          for step in checkout build lint test run-app integration; do
-            if [ "${{ steps.$step.outcome }}" == "failure" ]; then
-              echo "::set-output name=failed_step::$step"
-              break
-            fi
-          done
+        env:
+          STEPS_CONTEXT: ${{ toJson(steps) }}
+
   error-notification:
     needs: run-tests
 
     runs-on: ubuntu-latest
 
-    if: needs.run-tests.result == 'failure'
+    if: failure()
 
     steps:
       - name: Notify on Failure
@@ -89,7 +82,7 @@ jobs:
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_CHANNEL: developing
-          SLACK_MESSAGE: The workflow  ${{ github.workflow }} of ${{ github.repository }} failed due to ${{ needs.run-tests.outputs.failed_step }}
+          SLACK_MESSAGE: The workflow  ${{ github.workflow }} of ${{ github.repository }}  ${{ needs.run-tests.result }} in steps resut ${{ STEPS_CONTEXT }}
 
   deploy:
     needs:
