--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -82,7 +82,7 @@ jobs:
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_CHANNEL: developing
-          SLACK_MESSAGE: The workflow  ${{ github.workflow }} of ${{ github.repository }}  ${{ needs.run-tests.result }} in steps resut ${{ STEPS_CONTEXT }}
+          SLACK_MESSAGE: The workflow  ${{ github.workflow }} of ${{ github.repository }}  ${{ needs.run-tests.result }} in steps resut ${{ env.STEPS_CONTEXT }}
 
   deploy:
     needs:
