--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -64,8 +64,8 @@ jobs:
         run: |
           npm install cypress cypress-json-results
           npx cypress run
-        env:
-          STEPS_CONTEXT: ${{ toJson(steps) }}
+    outputs:
+      output1: ${{ toJson(steps) }}
 
   error-notification:
     needs: run-tests
@@ -82,7 +82,7 @@ jobs:
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_CHANNEL: developing
-          SLACK_MESSAGE: The workflow  ${{ github.workflow }} of ${{ github.repository }}  ${{ needs.run-tests.result }} in steps resut ${{ env.STEPS_CONTEXT }}
+          SLACK_MESSAGE: The workflow  ${{ github.workflow }} of ${{ github.repository }} failed ${{ needs.run-tests.result }} steps resutl ${{ needs.run-tests.outputs.output1 }}
 
   deploy:
     needs:
