--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,6 +43,7 @@ jobs:
       SENDGRID_PASSWORD: "${{ secrets.SENDGRID_PASSWORD }}"
       SENDGRID_PORT: "${{ secrets.SENDGRID_PORT }}"
       SENDGRID_USERNAME: "${{ secrets.SENDGRID_USERNAME }}"
+      STEPS_CONTEXT: ""
     steps:
       - name: Check out repository code
         uses: actions/checkout@v3
@@ -64,8 +65,16 @@ jobs:
         run: |
           npm install cypress cypress-json-results
           npx cypress run
-    outputs:
-      output1: ${{ toJson(steps) }}
+
+      - name: Set matrix output for each step
+        run: |
+          for step in checkout build lint test run-app integration; do
+            echo "::set-output name=${step}::${{ job.status }}"
+          done
+
+          # Capture the entire steps context as a JSON string
+          STEPS_CONTEXT=$(echo "${{ toJson(steps) }}" | jq -c .)
+          echo "STEPS_CONTEXT=${STEPS_CONTEXT}" >> $GITHUB_ENV
 
   error-notification:
     needs: run-tests
@@ -82,7 +91,7 @@ jobs:
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_CHANNEL: developing
-          SLACK_MESSAGE: The workflow  ${{ github.workflow }} of ${{ github.repository }} failed ${{ needs.run-tests.result }} steps resutl ${{ needs.run-tests.outputs.output1 }}
+          SLACK_MESSAGE: The workflow  ${{ github.workflow }} of ${{ github.repository }} job run-tests ${{ needs.run-tests.result }}. Outcome- ${{ env.STEPS_CONTEXT }}
 
   deploy:
     needs:
