--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -74,7 +74,7 @@ jobs:
 
           # Capture the entire steps context as a JSON string
           STEPS_CONTEXT=$(echo "${{ toJson(steps) }}" | jq -c .)
-          echo "STEPS_CONTEXT=${STEPS_CONTEXT}" >> $GITHUB_ENV
+          echo "$STEPS_CONTEXT" > steps-context.json
 
   error-notification:
     needs: run-tests
@@ -84,6 +84,9 @@ jobs:
     if: failure()
 
     steps:
+      - name: Debug STEPS_CONTEXT
+        run: |
+          cat steps-context.json
       - name: Notify on Failure
         uses: rtCamp/action-slack-notify@v2
         with:
@@ -91,7 +94,7 @@ jobs:
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_CHANNEL: developing
-          SLACK_MESSAGE: The workflow  ${{ github.workflow }} of ${{ github.repository }} job run-tests ${{ needs.run-tests.result }}. Outcome- ${{ env.STEPS_CONTEXT }}
+          SLACK_MESSAGE: The workflow  ${{ github.workflow }} of ${{ github.repository }} job run-tests ${{ needs.run-tests.result }}. Outcome- ${{ steps.file-content.steps-context.json }}
 
   deploy:
     needs:
