--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -76,6 +76,13 @@ jobs:
           STEPS_CONTEXT=$(echo "${{ toJson(steps) }}" | jq -c .)
           echo "$STEPS_CONTEXT" > steps-context.json
 
+      - name: Upload artifacts
+        id: artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: artifacts
+          path: steps-context.json
+
   error-notification:
     needs: run-tests
 
@@ -101,6 +108,10 @@ jobs:
       - run-tests
     runs-on: ubuntu-latest
     steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: artifacts
       - name: Deploy to production
         uses: johnbeynon/render-deploy-action@v0.0.8
         with:
