--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -85,7 +85,19 @@ jobs:
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_CHANNEL: developing
-          SLACK_MESSAGE: The workflow  ${{ github.workflow }} of ${{ github.repository }} failed in run-tests job. Outcome- ${{ needs.run-tests.outputs.output1 }} ${{ needs.run-tests.outputs.output2}}
+          SLACK_MESSAGE: |
+            :warning: *Pipeline Failed* :warning:
+
+            Workflow: ${{ github.workflow }}
+            Repository: ${{ github.repository }}
+            Commit: ${{ github.sha }}
+
+            The CI/CD pipeline has failed in the run-tests job.
+
+            Outcome 1: ${{ needs.run-tests.outputs.output1 }}
+            Outcome 2: ${{ needs.run-tests.outputs.output2 }}
+
+            [Workflow Logs](${{ github.run_url }}/jobs/${{ github.job }}/log)
 
   deploy:
     needs:
