--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -66,28 +66,6 @@ jobs:
         run: |
           npm install cypress cypress-json-results
           npx cypress run
-    outputs:
-      output1: ${{steps.integration.test}}
-      output2: ${{steps.integration.name}}
-
-  error-notification:
-    needs: run-tests
-
-    runs-on: ubuntu-latest
-
-    if: failure()
-
-    steps:
-      - name: Set output with failed step name
-        id: output
-        if: failure()
-        run: |
-          for step in checkout build lint test run-app integration; do
-          if [ "${{ needs.run-tests.outputs[${step}] }}" == "failure" ]; then
-            echo "::set-output name=failed_step::$step"
-            break
-          fi
-          done
       - name: Notify on Failure
         uses: rtCamp/action-slack-notify@v2
         with:
@@ -101,9 +79,34 @@ jobs:
             Workflow: ${{ github.workflow }}
             Repository: ${{ github.repository }}
             Commit: ${{ github.sha }}
-            The CI/CD pipeline has failed in the '${{ needs.run-tests.outputs.failed_step }}' step.
+            The CI/CD pipeline has status ${{ toJson(steps) }}.
 
             [Workflow Logs](${{ github.run_url }}/jobs/${{ github.job }}/log)
+
+  # error-notification:
+  #   needs: run-tests
+
+  #   runs-on: ubuntu-latest
+
+  #   if: failure()
+
+  #   steps:
+  #     - name: Notify on Failure
+  #       uses: rtCamp/action-slack-notify@v2
+  #       with:
+  #         status: ${{ needs.run-tests.result }}
+  #       env:
+  #         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+  #         SLACK_CHANNEL: developing
+  #         SLACK_MESSAGE: |
+  #           :warning: *Pipeline Failed* :warning:
+
+  #           Workflow: ${{ github.workflow }}
+  #           Repository: ${{ github.repository }}
+  #           Commit: ${{ github.sha }}
+  #           The CI/CD pipeline has failed in the '${{ needs.run-tests.steps.test }}' step.
+
+  #           [Workflow Logs](${{ github.run_url }}/jobs/${{ github.job }}/log)
 
   deploy:
     needs:
