--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -83,7 +83,7 @@ jobs:
         with:
           script: |
             async function run() {
-              const workflowRun = await github.getWorkflowRun({ owner: she-code, repo: Wd_Capostone, run_id: github.context.runId });
+              const workflowRun = await github.getWorkflowRun({ owner: 'she-code', repo: 'Wd_Capostone', run_id: github.context.runId });
               const failedJob = workflowRun.data.jobs.find(job => job.status === 'failure');
 
               if (failedJob) {
