--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -70,54 +70,6 @@ jobs:
       output1: ${{steps.integration.test}}
       output2: ${{steps.integration.name}}
 
-  error-notification:
-    needs: run-tests
-
-    runs-on: ubuntu-latest
-
-    if: failure()
-
-    steps:
-      - name: Get failed job and state
-        uses: actions/github-script@v6
-        with:
-          script: |
-            async function run() {
-            const { data: workflowRun } = await octokit.rest.actions.getWorkflowRun({
-              owner: 'she-code',
-              repo: 'Wd_Capostone',
-              run_id: github.runId
-            });
-
-            const failedJob = workflowRun.jobs.find(job => job.status === 'failure');
-
-            if (failedJob) {
-              core.setOutput('failed_job_name', failedJob.name);
-              core.setOutput('failed_job_state', failedJob.status);
-            } else {
-              core.setFailed('No failed jobs found in this workflow run');
-            }
-            }
-
-            return run();
-      - name: Notify on Failure
-        uses: rtCamp/action-slack-notify@v2
-        with:
-          status: ${{ needs.run-tests.result }}
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_CHANNEL: developing
-          SLACK_MESSAGE: |
-            :warning: *Pipeline Failed* :warning:
-
-            Workflow: ${{ github.workflow }}
-            Repository: ${{ github.repository }}
-            Commit: ${{ github.sha }}
-
-            **Failed Job:** ${{ steps.get_failed_job_and_state.outputs.failed_job_name }}
-            **Job State:** ${{ steps.get_failed_job_and_state.outputs.failed_job_state }}
-            [Workflow Logs](${{ github.run_url }}/jobs/${{ github.job }}/log)
-
   deploy:
     needs:
       - run-tests
@@ -128,6 +80,41 @@ jobs:
         with:
           service-id: "${{ secrets.MY_RENDER_SERVICE_ID }}"
           api-key: "${{ secrets.MY_RENDER_API_KEY }}"
+
+  error-notification:
+    needs: [run-tests, deploy]
+
+    runs-on: ubuntu-latest
+
+    if: failure()
+
+    steps:
+      - name: Notify on Failure
+        uses: rtCamp/action-slack-notify@v2
+        with:
+          status: ${{ needs.run-tests.result }}
+          env:
+            SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+            SLACK_CHANNEL: developing
+            SLACK_MESSAGE: |
+              The workflow **${{ github.workflow }}** of **${{ github.repository }}** failed.
+
+              **Details:**
+
+              * Repository: ${{ github.repository }}
+              * Workflow: ${{ github.workflow }}
+
+              {{# if needs.run-tests.result == 'failure' }}
+              * Failed Job: Run Tests
+              * Error Logs: [Click here](https://github.com/{{ github.repository }}/actions/runs/${{ github.run_id }}/logs?name=error-notification)
+              * Tests Status: Tests failed ${{needs.run-tests}}
+              {{/ if }}
+
+              {{# if needs.deploy.result == 'failure' }}
+              * Failed Job: Deploy
+              * Error Logs: [Click here](https://github.com/{{ github.repository }}/actions/runs/${{ github.run_id }}/logs?name=error-notification)
+              * Deploy Status: Deploy unsuccessful ${{needs.run-tests}}
+              {{/ if }}
 
   successful-deployment:
     needs: deploy
