--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -70,6 +70,33 @@ jobs:
       output1: ${{steps.integration.test}}
       output2: ${{steps.integration.name}}
 
+  error-notification:
+    needs: run-tests
+
+    runs-on: ubuntu-latest
+
+    if: failure()
+
+    steps:
+      - name: Notify on Failure
+        uses: rtCamp/action-slack-notify@v2
+        with:
+          status: ${{ needs.run-tests.result }}
+
+          env:
+            SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+            SLACK_CHANNEL: developing
+            SLACK_MESSAGE: |
+              :warning: *Pipeline Failed* :warning:
+
+              Workflow: ${{ github.workflow }}
+              Repository: ${{ github.repository }}
+              Commit: ${{ github.sha }}
+
+              The CI/CD pipeline has failed. Please check the workflow logs for details. ${{needs.run-tests}}
+
+              [Workflow Logs](${{ github.run_url }}/jobs/${{ github.job }})
+
   deploy:
     needs:
       - run-tests
@@ -81,32 +108,6 @@ jobs:
           service-id: "${{ secrets.MY_RENDER_SERVICE_ID }}"
           api-key: "${{ secrets.MY_RENDER_API_KEY }}"
 
-  error-notification:
-    needs: [run-tests, deploy]
-
-    runs-on: ubuntu-latest
-
-    if: failure()
-
-    steps:
-      - name: Notify on Failure
-        uses: rtCamp/action-slack-notify@v2
-        with:
-          status: ${{ needs.run-tests.result }}
-          env:
-            SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-            SLACK_CHANNEL: developing
-            SLACK_MESSAGE: |
-              The workflow **${{ github.workflow }}** of **${{ github.repository }}** failed.
-
-              **Details:**
-
-              * Repository: ${{ github.repository }}
-              * Workflow: ${{ github.workflow }}
-
-              ${{ if needs.run-tests.result == 'failure' }}* Failed Job: Run Tests\n* Error Logs: [Click here](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/logs?name=error-notification)\n* Tests Status: Tests failed\n\n${{ endif }}
-
-               ${{ if needs.deploy.result == 'failure' }}* Failed Job: Deploy\n* Error Logs: [Click here](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/logs?name=error-notification)\n* Deploy Status: Deploy unsuccessful\n\n${{ endif }}
   successful-deployment:
     needs: deploy
 
