Added condition for error notification

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -93,7 +93,7 @@ jobs:
               Repository: ${{ github.repository }}
               Commit: ${{ github.sha }}
 
-              The CI/CD pipeline has failed. Please check the workflow logs for details. ${{needs.run-tests}}
+              The CI/CD pipeline has failed. Please check the workflow logs for details. 
 
               [Workflow Logs](${{ github.run_url }}/jobs/${{ github.job }})
 
