--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -66,31 +66,23 @@ jobs:
         run: |
           npm install cypress cypress-json-results
           npx cypress run
-    outputs:
-      output1: ${{steps.integration.test}}
-      output2: ${{steps.integration.name}}
+
   error-notification:
     needs: run-tests
+
     runs-on: ubuntu-latest
+
     if: failure()
+
     steps:
       - name: Notify on Failure
         uses: rtCamp/action-slack-notify@v2
         with:
           status: ${{ needs.run-tests.result }}
-          env:
-            SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-            SLACK_CHANNEL: developing
-            SLACK_MESSAGE: |
-              :warning: *Pipeline Failed* :warning:
-
-              Workflow: ${{ github.workflow }}
-              Repository: ${{ github.repository }}
-              Commit: ${{ github.sha }}
-
-              The CI/CD pipeline has failed. Please check the workflow logs for details. ${{needs.run-tests}}
-
-              [Workflow Logs](${{ github.run_url }}/jobs/${{ github.job }})
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_CHANNEL: developing
+          SLACK_MESSAGE: The workflow  ${{ github.workflow }} of ${{ github.repository }} failed in the step ${{ needs.run-tests.name }}
 
   deploy:
     needs:
