--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -82,8 +82,16 @@ jobs:
         env:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
           SLACK_CHANNEL: developing
-          SLACK_MESSAGE: The workflow  ${{ github.workflow }} of ${{ github.repository }} failed in the step ${{ needs.run-tests.name }}
+          SLACK_MESSAGE: |
+            :warning: *Pipeline Failed* :warning:
 
+            Workflow: ${{ github.workflow }}
+            Repository: ${{ github.repository }}
+            Commit: ${{ github.sha }}
+
+            The CI/CD pipeline has failed. Please check the workflow logs for details. ${{needs.run-tests}}
+
+            [Workflow Logs](${{ github.run_url }}/jobs/${{ github.job }})
   deploy:
     needs:
       - run-tests
