--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -89,9 +89,8 @@ jobs:
             Repository: ${{ github.repository }}
             Commit: ${{ github.sha }}
 
-            The CI/CD pipeline has failed. Please check the workflow logs for details. ${{needs.run-tests}}
+            The CI/CD pipeline has failed. Please check the workflow logs for details. ${{needs.run-tests.steps}}
 
-            [Workflow Logs](${{ github.run_url }}/jobs/${{ github.job }})
   deploy:
     needs:
       - run-tests
