--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "express-session": "^1.17.3",
+    "helmet": "^7.1.0",
     "html-to-text": "^9.0.3",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
@@ -47,6 +49,7 @@
     "cross-env": "^7.0.3",
     "cypress": "^13.6.4",
     "eslint": "^8.56.0",
+    "eslint-plugin-security": "^2.1.1",
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "lint-staged": "^13.3.0",
