Updated start script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
     "start": "nodemon -e js,ejs",
     "test": "NODE_ENV=test jest --detectOpenHandles",
-    "start:prod": "pm2-runtime start ecosystem.config.js --env production",
+    "start:prod": "node index.js",
     "prepare": "husky install",
     "clean:start": "npm run pretest && NODE_ENV=test npm start",
     "cypress:open": "cypress open",
